Fix wrong margin in pokemon detail page

--- a/src/styles/components/PokeDetail.module.css
+++ b/src/styles/components/PokeDetail.module.css
@@ -92,6 +92,8 @@
   border-radius: 8px;
   overflow-y: auto;
   overflow-x: hidden;
+  padding-top: 5.5rem;
+  padding-bottom: 3rem;
 }
 
 .pokeDetail .detailContainer .pokemonImage {
@@ -107,8 +109,8 @@
   align-items: center;
   justify-content: center;
   width: 85%;
-  margin-top: 5.5rem;
   padding: 0;
+  margin: 0;
 }
 
 .pokeDetail .detailContainer .typeContainer li {
@@ -127,7 +129,8 @@
 .pokeDetail .detailContainer h3 {
   font-size: 1.3rem;
   font-weight: bold;
-  margin: 1rem;
+  margin: 0;
+  margin-top: 1.5rem;
   color: var(--color-poke);
 }
 
@@ -140,6 +143,7 @@
   height: 100%;
   padding: 0;
   margin: 0;
+  margin-top: 1.5rem;
 }
 
 .pokeDetail .detailContainer .infoContainer li {
@@ -198,8 +202,8 @@
   justify-content: center;
   width: 90%;
   padding: 0;
-  margin: 1.5rem 0;
-  margin-bottom: 0;
+  margin: 0;
+  margin-top: 1.5rem;
 }
 
 .pokeDetail .statsContainer {
@@ -211,7 +215,7 @@
   height: 100%;
   padding: 0;
   margin: 0;
-  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 .pokeDetail .statsContainer li {
